#dashboard and categories page aded

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -13,3 +13,10 @@
   background: rgb(255, 255, 255);
   color: white !important;
 }
+
+.styl32 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 0px 20px;
+}
