--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -6,7 +6,7 @@
   z-index: 10;
 }
 .header-shadow {
-  box-shadow: rgb(0 0 0 / 8%) 0px 1px 12px !important;
+  box-shadow: 0px 3px 6px rgb(0 0 0 / 16%);
   transform-origin: 50% 0% !important;
   transition: -ms-transform 150ms ease 0s, -webkit-transform 150ms ease 0s,
     transform 150ms ease 0s, opacity 150ms ease 75ms !important;
